  Locale:
    - Removed the period after the "Trade Productivity" mod settings in the EN locale.
  Modding:
    - Updated Factorio version dependency to prevent crash on pre-2.0.69 versions.
  Gui:
    - The trade quality preview dropdown now only shows up if you have a quality higher than normal unlocked, reducing visual clutter for new players.
  Bugfixes:
    - Fixed all possible crashes that could be caused by using the wrong value types in commands.
    - Fixed that stack inserters and biolabs had no item value, causing them to never show up in trades or the catalog.
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 15/11/25
  Features:
    - Added several quests. There are now 50 in total.
  Balancing:
    - Added tiered quests for item ranks to fill the progression gap.
    - Replaced the "Catalog Professional" quest with the new, equivalent "First Red Star" quest.
    - Moved the "Catalog Professional" quest to an earlier stage of the game, having easier requirements.
  Gui:
    - Added info tooltip for the quality preview dropdown in the hex core GUI. Removed the relevant clutter.
    - Added an intermediate quest for each planet which unlocks the other quests on that planet by visiting it, cleaning up the questbook early-game.
    - Added extra info to the tooltip of the upgrade quality button in hex cores.
  Changes:
    - Changed the shortcut tool icons (for "Claim Hexes" and "Delete Hex Cores") from white to black.
  Bugfixes:
    - Fixed that completed quests weren't showing complete progress bars after updating the mod.
    - Fixed that an overflowing trade could block other trades from occurring in some situations.
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 1/10/25
  Gui:
    - Added image for the "Catalog Professional" quest.
  Bugfixes: